; ModuleID = '/home/carl/AnghaBench/git/extr_tree-walk.c_update_tree_entry.c'
source_filename = "/home/carl/AnghaBench/git/extr_tree-walk.c_update_tree_entry.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.strbuf = type { i32 }
%struct.tree_desc = type { i32 }

@STRBUF_INIT = common dso_local global %struct.strbuf zeroinitializer, align 4
@.str = private unnamed_addr constant [3 x i8] c"%s\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @update_tree_entry(%struct.tree_desc* %0) #0 {
  %2 = alloca %struct.tree_desc*, align 8
  %3 = alloca %struct.strbuf, align 4
  store %struct.tree_desc* %0, %struct.tree_desc** %2, align 8
  %4 = bitcast %struct.strbuf* %3 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %4, i8* align 4 bitcast (%struct.strbuf* @STRBUF_INIT to i8*), i64 4, i1 false)
  %5 = load %struct.tree_desc*, %struct.tree_desc** %2, align 8
  %6 = call i64 @update_tree_entry_internal(%struct.tree_desc* %5, %struct.strbuf* %3)
  %7 = icmp ne i64 %6, 0
  br i1 %7, label %8, label %12

8:                                                ; preds = %1
  %9 = getelementptr inbounds %struct.strbuf, %struct.strbuf* %3, i32 0, i32 0
  %10 = load i32, i32* %9, align 4
  %11 = call i32 @die(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %10)
  br label %12

12:                                               ; preds = %8, %1
  %13 = call i32 @strbuf_release(%struct.strbuf* %3)
  ret void
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @update_tree_entry_internal(%struct.tree_desc*, %struct.strbuf*) #2

declare dso_local i32 @die(i8*, i32) #2

declare dso_local i32 @strbuf_release(%struct.strbuf*) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
